# cookpad-auto-cook

./: CLAUDE.md  README.md  debug_run.py  fridge_config.toml.example  pyproject.toml
cookpad/fridge/: __init__.py  camera.py  cli.py  config.py  gdrive.py  pdf.py  planner.py  printer.py  scheduler.py
cookpad/fridge/db/: __init__.py  inventory.py  meal_history.py  nutrition_cache.py  schema.py
cookpad/fridge/iaeon/: __init__.py  auth.py  models.py  otp.py  receipts.py
cookpad/fridge/nutrition/: __init__.py  calculator.py  mext_data.py  units.py
cookpad/fridge/nutrition/data/: mext_2020_v8.json
cookpad/fridge/vision/: __init__.py  ai_hat.py  claude.py  gemini.py
tests/: test_camera.py  test_config.py  test_config_iaeon.py  test_db_inventory.py  test_db_schema.py  test_gdrive.py  test_iaeon_auth.py  test_iaeon_receipts.py  test_nutrition_calculator.py  test_nutrition_mext.py  test_nutrition_units.py  test_pdf.py  test_planner.py  test_planner_nutrition.py  test_printer.py  test_scheduler.py  test_vision.py
