[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cookpad"
version = "1.0.1"
description = "Unofficial Cookpad API client for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "edamamex" }]
keywords = ["cookpad", "recipe", "api", "cooking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Framework :: AsyncIO",
]
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/EdamAme-x/cookpad-py"
Repository = "https://github.com/EdamAme-x/cookpad-py"

[tool.pytest.ini_options]
asyncio_mode = "strict"
