[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cookpad"
version = "1.0.2"
description = "Unofficial Cookpad API client for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "edamamex" }]
keywords = ["cookpad", "recipe", "api", "cooking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Framework :: AsyncIO",
]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
fridge = ["opencv-python>=4.8", "tomli>=2.0; python_version<'3.11'"]
claude = ["opencv-python>=4.8", "tomli>=2.0; python_version<'3.11'", "anthropic>=0.40"]
gemini = ["opencv-python>=4.8", "tomli>=2.0; python_version<'3.11'", "google-generativeai>=0.8"]
ai-hat = ["opencv-python>=4.8", "tomli>=2.0; python_version<'3.11'", "hailort>=4.18"]
pdf = ["reportlab>=4.0"]
gdrive = ["google-auth-oauthlib>=1.0", "google-api-python-client>=2.100"]
iaeon = ["iaeon>=0.1", "apscheduler>=3.10"]
scheduler = ["apscheduler>=3.10"]
bypass-otp = ["bypass-otp-lib>=0.1"]
full = ["cookpad[claude,pdf,gdrive,iaeon,scheduler]"]

[project.scripts]
cookpad-fridge = "cookpad.fridge.cli:main"

[project.urls]
Homepage = "https://github.com/EdamAme-x/cookpad-py"
Repository = "https://github.com/EdamAme-x/cookpad-py"

[tool.pytest.ini_options]
asyncio_mode = "strict"
